# serializer version: 1
# name: TestFormatAlertPolicies.test_format_policies_json_output[0]
  dict({
    'alert_policies': list([
      dict({
        'description': 'Send email on job failure',
        'event_types': list([
          'JOB_FAILURE',
        ]),
        'name': 'email-on-failure',
        'notification_service': dict({
          'email': dict({
            'email_addresses': list([
              'team@example.com',
            ]),
          }),
        }),
        'tags': list([
        ]),
      }),
      dict({
        'description': 'Notify Slack on SLA miss',
        'event_types': list([
          'ASSET_OVERDUE',
        ]),
        'name': 'slack-on-sla-miss',
        'notification_service': dict({
          'slack': dict({
            'slack_channel_name': '#alerts',
            'slack_workspace_name': 'dagster',
          }),
        }),
        'tags': list([
          dict({
            'key': 'team',
            'value': 'data-eng',
          }),
        ]),
      }),
    ]),
  })
# ---
# name: TestFormatAlertPolicies.test_format_policies_text_output[0]
  '''
  alert_policies:
  - name: email-on-failure
    description: Send email on job failure
    event_types:
    - JOB_FAILURE
    notification_service:
      email:
        email_addresses:
        - team@example.com
    tags: []
  - name: slack-on-sla-miss
    description: Notify Slack on SLA miss
    event_types:
    - ASSET_OVERDUE
    notification_service:
      slack:
        slack_workspace_name: dagster
        slack_channel_name: '#alerts'
    tags:
    - key: team
      value: data-eng
  '''
# ---
# name: TestFormatAlertPolicySyncResult.test_format_sync_result_json[0]
  dict({
    'synced_policies': list([
      'email-on-failure',
      'slack-on-sla-miss',
    ]),
  })
# ---
# name: TestFormatAlertPolicySyncResult.test_format_sync_result_text[0]
  'Synced alert policies: email-on-failure, slack-on-sla-miss'
# ---
# name: TestProcessAlertPoliciesResponse.test_successful_response_processing[0]
  AlertPolicyDocument(alert_policies=[{'name': 'email-on-failure', 'description': 'Send email on job failure', 'event_types': ['JOB_FAILURE'], 'notification_service': {'email': {'email_addresses': ['team@example.com']}}, 'tags': []}, {'name': 'slack-on-sla-miss', 'description': 'Notify Slack on SLA miss', 'event_types': ['ASSET_OVERDUE'], 'notification_service': {'slack': {'slack_workspace_name': 'dagster', 'slack_channel_name': '#alerts'}}, 'tags': [{'key': 'team', 'value': 'data-eng'}]}])
# ---
# name: TestProcessReconcileResponse.test_successful_reconcile[0]
  AlertPolicySyncResult(synced_policies=['email-on-failure', 'slack-on-sla-miss'])
# ---
